erDiagram
    approved_repositories {
        UUID id PK
        TEXT repository_url UK
        TEXT repository_owner
        TEXT repository_name
        TEXT default_ref
        BOOLEAN is_active
        TEXT notes
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    source_documents {
        UUID id PK
        UUID repository_id FK
        TEXT git_ref
        TEXT commit_sha
        TEXT source_path
        TEXT document_type
        TEXT standard_tag
        TEXT version_tag
        TEXT content_hash
        TIMESTAMPTZ indexed_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    source_chunks {
        UUID id PK
        UUID document_id FK
        INTEGER chunk_index
        TEXT section_heading
        TEXT chunk_text
        TEXT citation_label
        JSONB metadata
        TIMESTAMPTZ created_at
    }

    faq_entries {
        UUID id PK
        TEXT canonical_question
        TEXT normalized_intent UK
        TEXT standard_tag
        faq_status status
        UUID current_version_id FK
        TIMESTAMPTZ first_published_at
        TIMESTAMPTZ last_reviewed_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    faq_versions {
        UUID id PK
        UUID faq_entry_id FK
        INTEGER version_number
        TEXT answer_markdown
        answer_mode answer_mode
        NUMERIC confidence_score
        BOOLEAN has_complete_citations
        BOOLEAN has_unsupported_claims
        TEXT created_by
        TIMESTAMPTZ created_at
    }

    review_events {
        UUID id PK
        UUID faq_version_id FK
        TEXT reviewer_id
        review_decision decision
        TEXT review_notes
        TIMESTAMPTZ created_at
    }

    question_events {
        UUID id PK
        TEXT session_id
        TEXT user_id
        TEXT raw_question
        TEXT normalized_intent
        UUID matched_faq_entry_id FK
        answer_mode answer_mode
        NUMERIC confidence_score
        feedback_value feedback
        TEXT abstention_reason
        TIMESTAMPTZ created_at
    }

    retrieval_events {
        UUID id PK
        UUID question_event_id FK
        UUID repository_id FK
        TEXT retrieval_query
        INTEGER top_k
        NUMERIC retrieval_score
        BOOLEAN evidence_sufficient
        TIMESTAMPTZ created_at
    }

    answer_evidence_links {
        UUID id PK
        UUID faq_version_id FK
        UUID question_event_id FK
        UUID source_chunk_id FK
        TEXT claim_label
        TIMESTAMPTZ created_at
    }

    approved_repositories ||--o{ source_documents : allowlists
    source_documents ||--o{ source_chunks : splits_into
    faq_entries ||--o{ faq_versions : has_versions
    faq_versions ||--o{ review_events : reviewed_by
    faq_entries o|--o{ question_events : matched_by
    question_events ||--o{ retrieval_events : triggers
    approved_repositories o|--o{ retrieval_events : filtered_to
    source_chunks ||--o{ answer_evidence_links : supports
    faq_versions o|--o{ answer_evidence_links : cites
    question_events o|--o{ answer_evidence_links : cites
